package Inventarios.app.model;

public abstract class Reporte {
    public abstract void generar();
}
