package Inventarios.app.model;

public enum TipoCuenta {
    ACTIVO,
    PASIVO,
    PATRIMONIO,
    INGRESO,
    GASTO
}
